IALERT-3912: Implement models for the document format.